Fixed <p> elements goint out of bounds

--- a/nav.css
+++ b/nav.css
@@ -7,7 +7,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.925);
     border-width: 20px;
-    border-bottom: 3px solid #0f47fd;
+    border-bottom: 5px solid #7700ff;
     padding-left: 20px;
     padding-right: 20px;
     z-index: 5;
@@ -15,7 +15,7 @@
 
 .navbar_div {
     text-decoration: none;
-    background-color: #6d3785;
+    background-color: #383785;
     color: #ffffff;
     font-size: 1.2rem;
     font: bold;
@@ -47,7 +47,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: #0f47fd;
+    background-color: #7700ff;
     padding-left: 5px;
     padding-right: 5px;
     margin-right: 5px;
